#730: replace usage of startDate with timestamp when computing duration