@@ -5,27 +5,47 @@ import com.seleniumtests.reporter.logger.TestStep;
 import com.seleniumtests.util.har.*;
 import com.seleniumtests.util.logging.SeleniumRobotLogger;
 
-import io.cucumber.cienvironment.internal.com.eclipsesource.json.Json;
-
 import org.apache.logging.log4j.Logger;
-import org.jetbrains.annotations.NotNull;
 import org.json.JSONException;
 import org.json.JSONObject;
 import org.openqa.selenium.logging.LogEntry;
 
 import java.time.Instant;
-import java.time.LocalDateTime;
 import java.time.ZoneId;
-import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
 public class ChromeUtils {
 
-    private static final Logger logger = SeleniumRobotLogger.getLogger(WebUIDriver.class);
+	private static final Logger logger = SeleniumRobotLogger.getLogger(ChromeUtils.class);
+	public static final String KEY_PARAMS = "params";
+	public static final String KEY_REQUEST_ID = "requestId";
+	public static final String KEY_RESPONSE = "response";
+	public static final String KEY_METHOD = "method";
+	public static final String KEY_TIMESTAMP = "timestamp";
+	public static final String KEY_CONTENT_LENGTH = "Content-Length";
+	public static final String KEY_REQUEST = "request";
+	public static final String KEY_REQUEST_WILL_BE_SENT_EXTRA_INFO = "requestWillBeSentExtraInfo";
+	public static final String KEY_LOADING_FINISHED = "loadingFinished";
+	public static final String KEY_LOADING_FAILED = "loadingFailed";
+	public static final String KEY_RESPONSE_RECEIVED_EXTRA_INFO = "responseReceivedExtraInfo";
+	public static final String KEY_RESPONSE_RECEIVED = "responseReceived";
+	public static final String KEY_REQUEST_WILL_BE_SENT = "requestWillBeSent";
+	public static final String KEY_WEB_SOCKET_FRAME_RECEIVED = "webSocketFrameReceived";
+	public static final String KEY_WEB_SOCKET_FRAME_SENT = "webSocketFrameSent";
+	public static final String KEY_WEB_SOCKET_HANDSHAKE_RESPONSE_RECEIVED = "webSocketHandshakeResponseReceived";
+	public static final String KEY_WEB_SOCKET_WILL_SEND_HANDSHAKE_REQUEST = "webSocketWillSendHandshakeRequest";
+	public static final String KEY_WEB_SOCKET_CLOSED = "webSocketClosed";
+	public static final String KEY_WEB_SOCKET_CREATED = "webSocketCreated";
+	public static final String KEY_X_UNKNOWN = "x-unknown";
+	public static final String KEY_TOKEN = "token";
 
-    public static Har parsePerformanceLogs(List<LogEntry> logEntries, List<TestStep> testSteps) {
+	private ChromeUtils() {
+		// nothing
+	}
+
+	public static Har parsePerformanceLogs(List<LogEntry> logEntries, List<TestStep> testSteps) {
         Map<String, HashMap<String, Object>> requests = new LinkedHashMap<>();
 
         Har har = new Har();
@@ -35,10 +55,10 @@ public class ChromeUtils {
         Map<Page, Boolean> usedPages = new LinkedHashMap<>();
         int id = 0;
         for (TestStep testStep: testSteps) {
-            Instant instant = testStep.getStartDate().toInstant();
-            String pageId = String.format("page_" + id++);
+            Instant instant = testStep.getTimestamp().toInstant();
+            String pageId = "page_" + id++;
             Page page = new Page(instant.atZone(ZoneId.systemDefault()).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME), pageId, testStep.getName());
-            pageStart.put(testStep.getStartDate().toInstant().toEpochMilli(), page);
+            pageStart.put(testStep.getTimestamp().toInstant().toEpochMilli(), page);
             usedPages.put(page, false);
         }
 
@@ -49,85 +69,85 @@ public class ChromeUtils {
             try {
                 jsonObject = new JSONObject(line.getMessage());
                 JSONObject messageObject = jsonObject.getJSONObject("message");
-                String method = messageObject.getString("method");
+                String method = messageObject.getString(KEY_METHOD);
                 switch (method) {
-                    // message format: {"message":{"method":"Network.requestWillBeSent","params":{"documentURL":"http://10.25.4.70:53669/test.html","frameId":"145E40AEF6F7A76C61973C3946CA0992","hasUserGesture":false,"initiator":{"columnNumber":180,"lineNumber":59,"type":"parser","url":"http://10.25.4.70:53669/test.html"},"loaderId":"6AAED31A84393CDE33A22E12ACA3924B","redirectHasExtraInfo":false,"request":{"headers":{"Referer":"http://10.25.4.70:53669/test.html","User-Agent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36"},"initialPriority":"Medium","isSameSite":true,"method":"GET","mixedContentType":"none","referrerPolicy":"strict-origin-when-cross-origin","url":"http://10.25.4.70:53669/googleSearch.png"},"requestId":"34060.2","timestamp":171300.445026,"type":"Image","wallTime":1739344558.303674}},"webview":"145E40AEF6F7A76C61973C3946CA0992"}
+                    // message format {"message":{"method":"Network.requestWillBeSent","params":{"documentURL":"http://10.25.4.70:53669/test.html","frameId":"145E40AEF6F7A76C61973C3946CA0992","hasUserGesture":false,"initiator":{"columnNumber":180,"lineNumber":59,"type":"parser","url":"http://10.25.4.70:53669/test.html"},"loaderId":"6AAED31A84393CDE33A22E12ACA3924B","redirectHasExtraInfo":false,"request":{"headers":{"Referer":"http://10.25.4.70:53669/test.html","User-Agent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36"},"initialPriority":"Medium","isSameSite":true,"method":"GET","mixedContentType":"none","referrerPolicy":"strict-origin-when-cross-origin","url":"http://10.25.4.70:53669/googleSearch.png"},"requestId":"34060.2","timestamp":171300.445026,"type":"Image","wallTime":1739344558.303674}},"webview":"145E40AEF6F7A76C61973C3946CA0992"}
                     case "Network.requestWillBeSent" -> {
-                        String requestId = messageObject.getJSONObject("params").getString("requestId");
+                        String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
                         requests.putIfAbsent(requestId, new HashMap<>());
-                        requests.get(requestId).put("requestWillBeSent", messageObject);
+                        requests.get(requestId).put(KEY_REQUEST_WILL_BE_SENT, messageObject);
                     }
                     case "Network.requestWillBeSentExtraInfo" -> {
-                        String requestId = messageObject.getJSONObject("params").getString("requestId");
+                        String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
                         requests.putIfAbsent(requestId, new HashMap<>());
-                        requests.get(requestId).put("requestWillBeSentExtraInfo", messageObject);
+                        requests.get(requestId).put(KEY_REQUEST_WILL_BE_SENT_EXTRA_INFO, messageObject);
                     }
                     // message format: {"message":{"method":"Network.responseReceived","params":{"frameId":"8C5E01A9EE0BD7556C532FCFBE04EE5D","hasExtraInfo":true,"loaderId":"3149B492109FC8E15361AE661A188A05","requestId":"3149B492109FC8E15361AE661A188A05","response":{"alternateProtocolUsage":"unspecifiedReason","charset":"","connectionId":109,"connectionReused":true,"encodedDataLength":101,"fromDiskCache":false,"fromPrefetchCache":false,"fromServiceWorker":false,"headers":{"Content-Length":"124","Date":"Tue, 11 Feb 2025 09:02:20 GMT","Server":"Jetty(11.0.24)"},"mimeType":"text/html","protocol":"http/1.1","remoteIPAddress":"10.200.38.44","remotePort":51230,"responseTime":1.739264540255014e+12,"securityState":"insecure","status":200,"statusText":"OK","timing":{"connectEnd":-1,"connectStart":-1,"dnsEnd":-1,"dnsStart":-1,"proxyEnd":4.019,"proxyStart":2.804,"pushEnd":0,"pushStart":0,"receiveHeadersEnd":11.977,"receiveHeadersStart":5.365,"requestTime":91274.541644,"sendEnd":4.238,"sendStart":4.129,"sslEnd":-1,"sslStart":-1,"workerFetchStart":-1,"workerReady":-1,"workerRespondWithSettled":-1,"workerStart":-1},"url":"http://10.200.38.44:51230/testIFrame3.html"},"timestamp":91274.558756,"type":"Document"}},"webview":"0327E68CEF262C8D77818DC5C8B14339"}
                     case "Network.responseReceived" -> {
-                        String requestId = messageObject.getJSONObject("params").getString("requestId");
+                        String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
                         requests.putIfAbsent(requestId, new HashMap<>());
-                        requests.get(requestId).put("responseReceived", messageObject);
+                        requests.get(requestId).put(KEY_RESPONSE_RECEIVED, messageObject);
                     }
                     // {"message":{"method":"Network.loadingFinished","params":{"encodedDataLength":924,"requestId":"28364.2","timestamp":192318.813115}},"webview":"D6FD686EEEFF1CF429E60E5D8F6A8D71"}
                     case "Network.loadingFinished" -> {
-                        String requestId = messageObject.getJSONObject("params").getString("requestId");
+                        String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
                         requests.putIfAbsent(requestId, new HashMap<>());
-                        requests.get(requestId).put("loadingFinished", messageObject);
+                        requests.get(requestId).put(KEY_LOADING_FINISHED, messageObject);
                     }
                     case "Network.loadingFailed" -> {
-                        String requestId = messageObject.getJSONObject("params").getString("requestId");
+                        String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
                         requests.putIfAbsent(requestId, new HashMap<>());
-                        requests.get(requestId).put("loadingFailed", messageObject);
+                        requests.get(requestId).put(KEY_LOADING_FAILED, messageObject);
                     }
                     // {"method":"Network.responseReceivedExtraInfo","params":{"blockedCookies":[],"cookiePartitionKey":{"hasCrossSiteAncestor":false,"topLevelSite":"http://127.0.0.1"},"cookiePartitionKeyOpaque":false,"exemptedCookies":[],"headers":{"Content-Length":"2538","Date":"Fri, 14 Feb 2025 15:42:13 GMT","Server":"Jetty(11.0.24)"},"headersText":"HTTP/1.1 200 OK\r\nDate: Fri, 14 Feb 2025 15:42:13 GMT\r\nContent-Length: 2538\r\nServer: Jetty(11.0.24)\r\n\r\n","requestId":"28364.5","resourceIPAddressSpace":"Local","statusCode":200}},"webview":"D6FD686EEEFF1CF429E60E5D8F6A8D71"}
                     // use to get the real status code (in case of cache loading)
                     case "Network.responseReceivedExtraInfo" -> {
-                        String requestId = messageObject.getJSONObject("params").getString("requestId");
+                        String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
                         requests.putIfAbsent(requestId, new HashMap<>());
-                        requests.get(requestId).put("responseReceivedExtraInfo", messageObject);
+                        requests.get(requestId).put(KEY_RESPONSE_RECEIVED_EXTRA_INFO, messageObject);
                     }
                     //{"message":{"method":"Network.webSocketCreated","params":{"initiator":{"stack":{"callFrames":[{"columnNumber":26053,"functionName":"start","lineNumber":8,"scriptId":"19","url":"https://127.0.0.1:0001/file/script/jquery.signalR.js"},{"columnNumber":20898,"functionName":"f","lineNumber":0,"scriptId":"10","url":"https://127.0.0.1/letmein/somefile.js"}]},"type":"script"},"requestId":"18060.25","url":"wss://127.0.0.1:0001/test"}},"webview":"0A33F09BEE850DE612D04D06EE1884AC"}
 					case "Network.webSocketCreated" -> {
-						String requestId = messageObject.getJSONObject("params").getString("requestId");
+						String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
 						requests.putIfAbsent(requestId, new HashMap<>());
-						requests.get(requestId).put("webSocketCreated", messageObject);
+						requests.get(requestId).put(KEY_WEB_SOCKET_CREATED, messageObject);
 					}
 					//{"message":{"method":"Network.webSocketClosed","params":{"requestId":"18060.25","timestamp":7892.631933}},"webview":"0A33F09BEE850DE612D04D06EE1884AC"}
 					case "Network.webSocketClosed" -> {
-						String requestId = messageObject.getJSONObject("params").getString("requestId");
+						String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
 						requests.putIfAbsent(requestId, new HashMap<>());
-						requests.get(requestId).put("webSocketClosed", messageObject);
+						requests.get(requestId).put(KEY_WEB_SOCKET_CLOSED, messageObject);
 					}
 					//{"message":{"method":"Network.webSocketWillSendHandshakeRequest","params":{"request":{"headers":{someHeaders}},"requestId":"18060.25","timestamp":7889.427888,"wallTime":1742975479.222366}},"webview":"0A33F09BEE850DE612D04D06EE1884AC"}
 					case "Network.webSocketWillSendHandshakeRequest" -> {
-						String requestId = messageObject.getJSONObject("params").getString("requestId");
+						String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
 						requests.putIfAbsent(requestId, new HashMap<>());
-						requests.get(requestId).put("webSocketWillSendHandshakeRequest", messageObject);
+						requests.get(requestId).put(KEY_WEB_SOCKET_WILL_SEND_HANDSHAKE_REQUEST, messageObject);
 					}
 					//{"message":{"method":"Network.webSocketHandshakeResponseReceived","params":{"requestId":"18060.25","response":{"headers":{"someHeaders"},"headersText":"someHeadersText","requestHeaders":{[...],"status":101,"statusText":"Switching Protocols"},"timestamp":7889.430853}},"webview":"0A33F09BEE850DE612D04D06EE1884AC"}
 					case "Network.webSocketHandshakeResponseReceived" -> {
-						String requestId = messageObject.getJSONObject("params").getString("requestId");
+						String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
 						requests.putIfAbsent(requestId, new HashMap<>());
-						requests.get(requestId).put("webSocketHandshakeResponseReceived", messageObject);
+						requests.get(requestId).put(KEY_WEB_SOCKET_HANDSHAKE_RESPONSE_RECEIVED, messageObject);
 					}
 					//{"message":{"method":"Network.webSocketFrameSent","params":{"requestId":"18060.25","response":{"mask":true,"opcode":1,"payloadData":"somePayloadDataItDoesntMatter"},"timestamp":7889.443974}},"webview":"0A33F09BEE850DE612D04D06EE1884AC"}
 					case "Network.webSocketFrameSent" -> {
-						String requestId = messageObject.getJSONObject("params").getString("requestId");
+						String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
 						requests.putIfAbsent(requestId, new HashMap<>());
 						//I'm adding the size as a way to unify the key in order to avoid overriding previous frames
-						requests.get(requestId).put("webSocketFrameSent" + requests.get(requestId).size(), messageObject);
+						requests.get(requestId).put(KEY_WEB_SOCKET_FRAME_SENT + requests.get(requestId).size(), messageObject);
 					}
 					//{"message":{"method":"Network.webSocketFrameReceived","params":{"requestId":"18060.25","response":{"mask":false,"opcode":1,"payloadData":"somePayloadDataItDoesntMatter"},"timestamp":7889.552894}},"webview":"0A33F09BEE850DE612D04D06EE1884AC"}
 					case "Network.webSocketFrameReceived" -> {
-						String requestId = messageObject.getJSONObject("params").getString("requestId");
+						String requestId = messageObject.getJSONObject(KEY_PARAMS).getString(KEY_REQUEST_ID);
 						requests.putIfAbsent(requestId, new HashMap<>());
 						//I'm adding the size as a way to unify the key in order to avoid overriding previous frames
-						requests.get(requestId).put("webSocketFrameReceived" + requests.get(requestId).size(), messageObject);
+						requests.get(requestId).put(KEY_WEB_SOCKET_FRAME_RECEIVED + requests.get(requestId).size(), messageObject);
 					}
                 }
 
             } catch (Exception e) {
-                logger.error("Error reading event " + line.getMessage());
+                logger.error("Error reading event {}", line.getMessage());
             }
         }
 
@@ -135,7 +155,7 @@ public class ChromeUtils {
             String requestId = requestsEntry.getKey();
             try {
 
-                JSONObject jsonRequest = (JSONObject) requestsEntry.getValue().get("requestWillBeSent");
+                JSONObject jsonRequest = (JSONObject) requestsEntry.getValue().get(KEY_REQUEST_WILL_BE_SENT);
                 // without request information, do nothing
                 if (jsonRequest == null) {
                 	//Check if requestsEntry is of webSocket type
@@ -151,20 +171,20 @@ public class ChromeUtils {
                 }
                 Request request = buildRequest(requestsEntry, jsonRequest);
 
-                JSONObject jsonResponse = (JSONObject) requestsEntry.getValue().get("responseReceived");
+                JSONObject jsonResponse = (JSONObject) requestsEntry.getValue().get(KEY_RESPONSE_RECEIVED);
                 Response response = buildResponse(requestsEntry, jsonResponse);
 
                 Timing timings;
                 double duration = -1;
 
                 if (jsonResponse != null) {
-                    double endLoadingTimestamp = jsonResponse.getJSONObject("params").getDouble("timestamp");
+                    double endLoadingTimestamp = jsonResponse.getJSONObject(KEY_PARAMS).getDouble(KEY_TIMESTAMP);
                     try {
-                        JSONObject jsonTimings = jsonResponse.getJSONObject("params").getJSONObject("response").getJSONObject("timing");
+                        JSONObject jsonTimings = jsonResponse.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getJSONObject("timing");
                         double startLoadingTimestamp = jsonTimings.getDouble("requestTime");
-                        if (requestsEntry.getValue().get("loadingFinished") != null) {
-                            JSONObject jsonLoadingFinished = (JSONObject) requestsEntry.getValue().get("loadingFinished");
-                            endLoadingTimestamp = jsonLoadingFinished.getJSONObject("params").getDouble("timestamp");
+                        if (requestsEntry.getValue().get(KEY_LOADING_FINISHED) != null) {
+                            JSONObject jsonLoadingFinished = (JSONObject) requestsEntry.getValue().get(KEY_LOADING_FINISHED);
+                            endLoadingTimestamp = jsonLoadingFinished.getJSONObject(KEY_PARAMS).getDouble(KEY_TIMESTAMP);
                         }
 
                         // for details about timings: https://chromedevtools.github.io/devtools-protocol/tot/Network/
@@ -185,36 +205,34 @@ public class ChromeUtils {
                         );
                     }
 
-                    duration = (endLoadingTimestamp - jsonRequest.getJSONObject("params").getDouble("timestamp")) * 1000;
+                    duration = (endLoadingTimestamp - jsonRequest.getJSONObject(KEY_PARAMS).getDouble(KEY_TIMESTAMP)) * 1000;
                 } else {
                     timings = new Timing(
                             0, 0, 0, 0, 0, 0, 0
                     );
                 }
 
-                long entryDate = (long) (jsonRequest.getJSONObject("params").getDouble("wallTime") * 1000);
+                long entryDate = (long) (jsonRequest.getJSONObject(KEY_PARAMS).getDouble("wallTime") * 1000);
 
                 Page pageRef = getPageRef(pageStart, entryDate);
                 usedPages.replace(pageRef, true);
 
                 Entry entry = new Entry(
                         pageRef == null ? "" : pageRef.getId(),
-                        Instant.ofEpochMilli((long) (jsonRequest.getJSONObject("params").getDouble("wallTime") * 1000)).atZone(ZoneId.systemDefault()).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME),
+                        Instant.ofEpochMilli((long) (jsonRequest.getJSONObject(KEY_PARAMS).getDouble("wallTime") * 1000)).atZone(ZoneId.systemDefault()).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME),
                         request,
                         response,
                         timings,
                         (int) duration);
                 log.addEntry(entry);
             } catch (JSONException e) {
-                logger.error("Error parsing request " + requestId, e);
+                logger.error("Error parsing request {}", requestId, e);
             }
         }
 
         // add only used pages
         for (Map.Entry<Page, Boolean> pageEntry: usedPages.entrySet()) {
-            //if (Boolean.TRUE.equals(pageEntry.getValue())) {
-                log.addPage(pageEntry.getKey());
-            //}
+			log.addPage(pageEntry.getKey());
         }
 
         return har;
@@ -232,10 +250,10 @@ public class ChromeUtils {
 	
     private static ArrayList<Object> getWebSocketEntry(Map.Entry<String, HashMap<String, Object>> requestsEntry, Map<Long, Page> pageStart) {
 		try {
-			JSONObject createdWebSocket = (JSONObject) requestsEntry.getValue().get("webSocketCreated");
-			JSONObject sendHandshakeReq = (JSONObject) requestsEntry.getValue().get("webSocketWillSendHandshakeRequest");
-			JSONObject receiveHandshakeResp = (JSONObject) requestsEntry.getValue().get("webSocketHandshakeResponseReceived");
-			JSONObject closedWebSocket = (JSONObject) requestsEntry.getValue().get("webSocketClosed");
+			JSONObject createdWebSocket = (JSONObject) requestsEntry.getValue().get(KEY_WEB_SOCKET_CREATED);
+			JSONObject sendHandshakeReq = (JSONObject) requestsEntry.getValue().get(KEY_WEB_SOCKET_WILL_SEND_HANDSHAKE_REQUEST);
+			JSONObject receiveHandshakeResp = (JSONObject) requestsEntry.getValue().get(KEY_WEB_SOCKET_HANDSHAKE_RESPONSE_RECEIVED);
+			JSONObject closedWebSocket = (JSONObject) requestsEntry.getValue().get(KEY_WEB_SOCKET_CLOSED);
 			
 			// Init the datas
 			String url = "wss://not.found";
@@ -248,7 +266,7 @@ public class ChromeUtils {
 					"",
 					new ArrayList<>(),
 					new ArrayList<>(),
-					new Content("x-unknown", 0, ""),
+					new Content(KEY_X_UNKNOWN, 0, ""),
 					"",
 					0,
 					0
@@ -257,7 +275,7 @@ public class ChromeUtils {
 			
 			// Setting every data possible following the available requests entries
 			if (createdWebSocket != null) {
-				url = createdWebSocket.getJSONObject("params").getString("url");
+				url = createdWebSocket.getJSONObject(KEY_PARAMS).getString("url");
 				req = buildWebSocketRequest(createdWebSocket, url);
 			}
 			
@@ -266,31 +284,31 @@ public class ChromeUtils {
 				req = buildWebSocketRequest(receiveHandshakeResp, url);
 				
 				// Set the response
-				JSONObject jsonResponseHeaders = receiveHandshakeResp.getJSONObject("params").getJSONObject("response").getJSONObject("headers");
+				JSONObject jsonResponseHeaders = receiveHandshakeResp.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getJSONObject("headers");
 				res = new Response(
-						receiveHandshakeResp.getJSONObject("params").getJSONObject("response").getInt("status"),
-						receiveHandshakeResp.getJSONObject("params").getJSONObject("response").getString("statusText"),
-						receiveHandshakeResp.getJSONObject("params").getJSONObject("response").getString("headersText").split(" ")[0],
+						receiveHandshakeResp.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getInt("status"),
+						receiveHandshakeResp.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getString("statusText"),
+						receiveHandshakeResp.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getString("headersText").split(" ")[0],
 						jsonResponseHeaders.keySet().stream()
-								.filter(key -> !key.toLowerCase().contains("token"))
+								.filter(key -> !key.toLowerCase().contains(KEY_TOKEN))
 								.map(key -> new Header(key, jsonResponseHeaders.getString(key)))
-								.collect(Collectors.toList()),
+								.toList(),
 						new ArrayList<>(),
-						new Content("x-unknown", 0, ""),
+						new Content(KEY_X_UNKNOWN, 0, ""),
 						"",
-						jsonResponseHeaders.optInt("Content-Length", 0),
+						jsonResponseHeaders.optInt(KEY_CONTENT_LENGTH, 0),
 						0);
 			}
 			
 			if (sendHandshakeReq != null) {
-				entryDate = (long) (sendHandshakeReq.getJSONObject("params").getDouble("wallTime") * 1000);
+				entryDate = (long) (sendHandshakeReq.getJSONObject(KEY_PARAMS).getDouble("wallTime") * 1000);
 				pageRef = getPageRef(pageStart, entryDate);
 				// Set the request in case there's no response message
 				if (req == null) {
 					req = buildWebSocketRequest(sendHandshakeReq, url);
 				}
 				if (closedWebSocket != null) {
-					duration = (int) (closedWebSocket.getJSONObject("params").getDouble("timestamp") * 1000 - sendHandshakeReq.getJSONObject("params").getDouble("timestamp") * 1000);
+					duration = (int) (closedWebSocket.getJSONObject(KEY_PARAMS).getDouble(KEY_TIMESTAMP) * 1000 - sendHandshakeReq.getJSONObject(KEY_PARAMS).getDouble(KEY_TIMESTAMP) * 1000);
 				}
 			}
 			
@@ -337,24 +355,24 @@ public class ChromeUtils {
 		int jsonHeadersSize;
 		
 		//First, determine if it's a Response entry or a Request entry
-		String entryMethod = jsonEntry.getString("method");
+		String entryMethod = jsonEntry.getString(KEY_METHOD);
 		
 		if (entryMethod.contains("Response")) {
-			JSONObject jsonRespHeaders = jsonEntry.getJSONObject("params").getJSONObject("response").getJSONObject("requestHeaders");
+			JSONObject jsonRespHeaders = jsonEntry.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getJSONObject("requestHeaders");
 			jsonHeaders = jsonRespHeaders.keySet().stream()
-					.filter(key -> !key.toLowerCase().contains("token"))
+					.filter(key -> !key.toLowerCase().contains(KEY_TOKEN))
 					.map(key -> new Header(key, jsonRespHeaders.getString(key)))
-					.collect(Collectors.toList());
-			jsonHeadersSize = jsonRespHeaders.optInt("Content-Length", 0);
+					.toList();
+			jsonHeadersSize = jsonRespHeaders.optInt(KEY_CONTENT_LENGTH, 0);
 			//in case the url hasn't been found in the webSocketCreated message
-			url = jsonEntry.getJSONObject("params").getJSONObject("response").getString("requestHeadersText").split(" ")[1];
+			url = jsonEntry.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getString("requestHeadersText").split(" ")[1];
 		} else if (entryMethod.contains("Request")) {
-			JSONObject jsonReqHeaders = jsonEntry.getJSONObject("params").getJSONObject("request").getJSONObject("headers");
+			JSONObject jsonReqHeaders = jsonEntry.getJSONObject(KEY_PARAMS).getJSONObject(KEY_REQUEST).getJSONObject("headers");
 			jsonHeaders = jsonReqHeaders.keySet().stream()
-					.filter(key -> !key.toLowerCase().contains("token"))
+					.filter(key -> !key.toLowerCase().contains(KEY_TOKEN))
 					.map(key -> new Header(key, jsonReqHeaders.getString(key)))
-					.collect(Collectors.toList());
-			jsonHeadersSize = jsonReqHeaders.optInt("Content-Length", 0);
+					.toList();
+			jsonHeadersSize = jsonReqHeaders.optInt(KEY_CONTENT_LENGTH, 0);
 		} else if (entryMethod.contains("Created")) {
 			//We accept webSocketCreated message because even if there's no headers 
 			//We at least can return the url this WS tried to reach which can help in debug
@@ -379,8 +397,8 @@ public class ChromeUtils {
 		List<WebSocketMessage> webSocketMessages = new ArrayList<>();
 		for (Map.Entry<String, Object> wsRequest : requestsEntry.getValue().entrySet()) {
 			JSONObject jswsRequest = (JSONObject) wsRequest.getValue();
-			if (jswsRequest.get("method").toString().contains("FrameSent")) {
-				String payloadData = jswsRequest.getJSONObject("params").getJSONObject("response").getString("payloadData");
+			if (jswsRequest.get(KEY_METHOD).toString().contains("FrameSent")) {
+				String payloadData = jswsRequest.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getString("payloadData");
 				//Substring the payload to give info on what data has been transferred without giving away sensitive data
 				if (payloadData.length() > 20) {
 					payloadData = payloadData.substring(0, 10) + " [...] " + payloadData.substring(payloadData.length() - 10);
@@ -389,11 +407,11 @@ public class ChromeUtils {
 				}
 				webSocketMessages.add(new WebSocketMessage(
 						"send",
-						jswsRequest.getJSONObject("params").getDouble("timestamp"),
-						jswsRequest.getJSONObject("params").getJSONObject("response").getInt("opcode"),
+						jswsRequest.getJSONObject(KEY_PARAMS).getDouble(KEY_TIMESTAMP),
+						jswsRequest.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getInt("opcode"),
 						payloadData));
-			} else if (jswsRequest.get("method").toString().contains("FrameReceived")) {
-				String payloadData = jswsRequest.getJSONObject("params").getJSONObject("response").getString("payloadData");
+			} else if (jswsRequest.get(KEY_METHOD).toString().contains("FrameReceived")) {
+				String payloadData = jswsRequest.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getString("payloadData");
 				//Substring the payload to give info on what data has been transferred without giving away sensitive data
 				if (payloadData.length() > 20) {
 					payloadData = payloadData.substring(0, 10) + " [...] " + payloadData.substring(payloadData.length() - 10);
@@ -402,8 +420,8 @@ public class ChromeUtils {
 				}
 				webSocketMessages.add(new WebSocketMessage(
 						"receive",
-						jswsRequest.getJSONObject("params").getDouble("timestamp"),
-						jswsRequest.getJSONObject("params").getJSONObject("response").getInt("opcode"),
+						jswsRequest.getJSONObject(KEY_PARAMS).getDouble(KEY_TIMESTAMP),
+						jswsRequest.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getInt("opcode"),
 						payloadData));
 			}
 		}
@@ -415,36 +433,36 @@ public class ChromeUtils {
         Response response;
         // according to spec, responseReceived event may not be fired in case of CORS
         if (jsonResponse != null) {
-            int statusCode = jsonResponse.getJSONObject("params").getJSONObject("response").getInt("status");
+            int statusCode = jsonResponse.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getInt("status");
 
-            if (requestsEntry.getValue().get("responseReceivedExtraInfo") != null) {
-                JSONObject jsonResponseExtraInfo = (JSONObject) requestsEntry.getValue().get("responseReceivedExtraInfo");
-                statusCode = jsonResponseExtraInfo.getJSONObject("params").getInt("statusCode");
+            if (requestsEntry.getValue().get(KEY_RESPONSE_RECEIVED_EXTRA_INFO) != null) {
+                JSONObject jsonResponseExtraInfo = (JSONObject) requestsEntry.getValue().get(KEY_RESPONSE_RECEIVED_EXTRA_INFO);
+                statusCode = jsonResponseExtraInfo.getJSONObject(KEY_PARAMS).getInt("statusCode");
             }
 
-            JSONObject jsonResponseHeaders = jsonResponse.getJSONObject("params").getJSONObject("response").getJSONObject("headers");
+            JSONObject jsonResponseHeaders = jsonResponse.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getJSONObject("headers");
             response = new Response(
                     statusCode,
-                    jsonResponse.getJSONObject("params").getJSONObject("response").getString("statusText"),
-                    jsonResponse.getJSONObject("params").getJSONObject("response").getString("protocol"),
+                    jsonResponse.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getString("statusText"),
+                    jsonResponse.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getString("protocol"),
                     jsonResponseHeaders.keySet().stream()
-                            .filter(key -> !key.toLowerCase().contains("token"))
+                            .filter(key -> !key.toLowerCase().contains(KEY_TOKEN))
                             .map(key -> new Header(key, jsonResponseHeaders.getString(key)))
-                            .collect(Collectors.toList()),
+                            .toList(),
                     new ArrayList<>(), // cookies
                     new Content(
-                            jsonResponse.getJSONObject("params").getJSONObject("response").getString("mimeType"),
-                            jsonResponseHeaders.optInt("Content-Length", 0),
+                            jsonResponse.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getString("mimeType"),
+                            jsonResponseHeaders.optInt(KEY_CONTENT_LENGTH, 0),
                             "_masked_"
                     ),
                     "",
-                    jsonResponse.getJSONObject("params").getJSONObject("response").getInt("encodedDataLength"),
-                    jsonResponseHeaders.optInt("Content-Length", 0)
+                    jsonResponse.getJSONObject(KEY_PARAMS).getJSONObject(KEY_RESPONSE).getInt("encodedDataLength"),
+                    jsonResponseHeaders.optInt(KEY_CONTENT_LENGTH, 0)
             );
         } else {
             String error = "No response received";
-            if (requestsEntry.getValue().get("loadingFailed") != null) {
-                error = ((JSONObject)requestsEntry.getValue().get("loadingFailed")).getJSONObject("params").getString("errorText");
+            if (requestsEntry.getValue().get(KEY_LOADING_FAILED) != null) {
+                error = ((JSONObject)requestsEntry.getValue().get(KEY_LOADING_FAILED)).getJSONObject(KEY_PARAMS).getString("errorText");
             }
             response = new Response(
                     0,
@@ -452,7 +470,7 @@ public class ChromeUtils {
                     "",
                     new ArrayList<>(),
                     new ArrayList<>(), // cookies
-                    new Content("x-unknown", 0, ""),
+                    new Content(KEY_X_UNKNOWN, 0, ""),
                     "",
                     -1,
                     -1
@@ -462,26 +480,25 @@ public class ChromeUtils {
     }
 
     private static Request buildRequest(Map.Entry<String, HashMap<String, Object>> requestsEntry, JSONObject jsonRequest) {
-        JSONObject jsonRequestHeaders = jsonRequest.getJSONObject("params").getJSONObject("request").getJSONObject("headers");
+        JSONObject jsonRequestHeaders = jsonRequest.getJSONObject(KEY_PARAMS).getJSONObject(KEY_REQUEST).getJSONObject("headers");
 
-        if (requestsEntry.getValue().get("requestWillBeSentExtraInfo") != null) {
-            jsonRequestHeaders = ((JSONObject) requestsEntry.getValue().get("requestWillBeSentExtraInfo")).getJSONObject("params").getJSONObject("headers");
+        if (requestsEntry.getValue().get(KEY_REQUEST_WILL_BE_SENT_EXTRA_INFO) != null) {
+            jsonRequestHeaders = ((JSONObject) requestsEntry.getValue().get(KEY_REQUEST_WILL_BE_SENT_EXTRA_INFO)).getJSONObject(KEY_PARAMS).getJSONObject("headers");
         }
 
         JSONObject finalJsonRequestHeaders = jsonRequestHeaders;
-        Request request = new Request(0,
-                jsonRequest.getJSONObject("params").getJSONObject("request").getString("method"),
-                jsonRequest.getJSONObject("params").getJSONObject("request").getString("url"),
+		return new Request(0,
+                jsonRequest.getJSONObject(KEY_PARAMS).getJSONObject(KEY_REQUEST).getString(KEY_METHOD),
+                jsonRequest.getJSONObject(KEY_PARAMS).getJSONObject(KEY_REQUEST).getString("url"),
                 "HTTP N/A",
                 jsonRequestHeaders.keySet().stream()
                         .filter(key -> !"Authorization".equals(key))
-                        .filter(key -> !key.toLowerCase().contains("token"))
+                        .filter(key -> !key.toLowerCase().contains(KEY_TOKEN))
                         .map(key -> new Header(key, finalJsonRequestHeaders.getString(key)))
-                        .collect(Collectors.toList()),
+                        .toList(),
                 new ArrayList<>(), // cookies
                 new ArrayList<>(),
                 0
         );
-        return request;
     }
 }
